syntax = "proto3";

package telemetry.message.event;

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";

import "google/protobuf/timestamp.proto";

message HubEventProto {
    string hub_id = 1; // hub identifier
    google.protobuf.Timestamp timestamp = 2; // event timestamp
    oneof payload { // specific event content
        DeviceAddedEventProto device_added = 3;      // device addition event data
        DeviceRemovedEventProto device_removed = 4;  // device removal event data
        ScenarioAddedEventProto scenario_added = 5;      // new scenario addition event data
        ScenarioRemovedEventProto scenario_removed = 6;  // scenario removal event data
    }
}

// device (de)registration events
enum DeviceTypeProto {
    MOTION_SENSOR = 0;      // motion sensor
    TEMPERATURE_SENSOR = 1; // temperature sensor
    LIGHT_SENSOR = 2;       // light sensor
    CLIMATE_SENSOR = 3;     // climate control sensor
    SWITCH_SENSOR = 4;      // switch
}

message DeviceAddedEventProto {
    string id = 1;        // device identifier
    DeviceTypeProto type = 2; // device type
}

message DeviceRemovedEventProto {
    string id = 1;        // device identifier
}

// scenario creation/deletion events
enum ConditionTypeProto {
    MOTION = 0;
    LUMINOSITY = 1;
    SWITCH = 2;
    TEMPERATURE = 3;
    CO2LEVEL = 4;
    HUMIDITY = 5;
}

enum ConditionOperationProto {
    EQUALS = 0;
    GREATER_THAN = 1;
    LOWER_THAN = 2;
}

message ScenarioConditionProto {
    string sensor_id = 1;
    ConditionTypeProto type = 2;
    ConditionOperationProto operation = 3;
    oneof value {
        bool bool_value = 4;
        int32 int_value = 5;
    }
}

enum ActionTypeProto {
    ACTIVATE = 0;
    DEACTIVATE = 1;
    INVERSE = 2;
    SET_VALUE = 3;
}

message DeviceActionProto {
    string sensor_id = 1; // device identifier
    ActionTypeProto type = 2;
    optional int32 value = 3;
}

message ScenarioAddedEventProto {
    string name = 1; // scenario name, unique within hub
    repeated ScenarioConditionProto condition = 2; // set of scenario activation conditions
    repeated DeviceActionProto action = 3; // set of actions to perform when scenario is activated
}

message ScenarioRemovedEventProto {
    string name = 1; // scenario name, unique within hub
}

message DeviceActionRequest {
    string hub_id = 1;
    string scenario_name = 2;
    DeviceActionProto action = 3;
    google.protobuf.Timestamp timestamp = 4;
}
